test/expected/explain_rga4i.out
explain register int a[4]
                     ^
22: error: array can not be register
